docker-k8s-workshop/day3/k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-clusterip
  labels:
    app: demo-app
    service-type: clusterip
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
