docker-k8s-workshop/day3/k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-loadbalancer
  labels:
    app: demo-app
    service-type: loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: demo-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
