docker-k8s-workshop/day3/k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-nodeport
  labels:
    app: demo-app
    service-type: nodeport
spec:
  type: NodePort
  selector:
    app: demo-app
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
    protocol: TCP
    name: http
